--- a/src/App.css
+++ b/src/App.css
@@ -1,206 +1,155 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Darker Grotesque', sans-serif;
+    box-sizing: border-box;
+    font-family: 'DM Sans', sans-serif;
 }
+
+:root {
+    --blue: #CDEDFF;
+    --orange: #FC531C;
+    --dark: #002337;
+    --dark-blue: #3A6278;
+}
+
 
 .app {
     min-height: 100vh;
-    background-color: #FDF2EC;
+    background-color: var(--blue);
 }
 
 .header {
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    padding: 20px;
+    color: var(--orange);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
-    position: relative;
-    margin-top: 40px;
-}
-
-.header img {
-    width: 40px;
-    cursor: pointer;
-}
-
-.toggle {
-    width: 50px;
-    height: 50px;
-    background-color: #FED834;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 20px;
-    cursor: pointer;
-    box-shadow: 6px 6px 0px 0px #000;
-
 }
 
 .hero {
-    padding: 40px 0px;
+    padding: 50px 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .heroText {
-    width: 80%;
-    font-size: 70px;
+    width: 60%;
+    font-size: 50px;
     line-height: 1em;
-    text-align: center;
-    font-weight: 500;
+    color: var(--orange);
 }
 
-.styledText {
-    font-size: 60px;
-    line-height: 1em;
-    margin-top: 10px;
-    background-color: #E2CCFB;
-    color: #000;
-    border-radius: 10px;
-    padding: 5px 30px;
-    border: 1.5px solid black;
-    box-shadow: 6px 6px 0px 0px #000;
-    transform: rotate(-3deg);
-}
-
-.marquee {
-    padding: 5px 0px;
-    font-size: 20px;
-    top: 0;
-    background-color: #222;
-    color: #FDF2EC;
+.hero p {
+    margin-top: 20px;
+    width: 60%;
 }
 
 .demo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding: 0px 20px;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70%;
+    width: 100%;
 }
 
 select {
-    width: 80%;
-    height: 50px;
+    width: 100%;
+    height: 45px;
     outline: none;
-    border: 1.5px solid black;
+    border: none;
     color: black;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 0px 15px;
-    font-size: 20px;
+    font-size: 16px;
     margin-bottom: -10px;
 }
 
 .button {
-    width: 80%;
-    height: 50px;
-    background-color: #FED834;
-    color: black;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 20px;
+    width: 100%;
+    height: 45px;
+    background-color: var(--orange);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-weight: 500;
+    font-size: 16px;
     cursor: pointer;
-    box-shadow: 6px 6px 0px 0px #000;
 
-}
-
-.results {
-    background-color: #F9F3FF;
-    margin-top: 50px;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
 }
 
 .result-card {
     background-color: #FFFFFF;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    padding: 50px;
+    border-radius: 20px;
+    min-height: 216px;
+    padding: 20px 40px;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .result-card h3 {
-    font-size: 16px;
-    color: #8E53E8;
-    text-transform: uppercase;
+    font-size: 14px;
+    color: var(--orange);
+    font-weight: 700;
 }
 
 .result-card p {
-    font-size: 40px;
+    font-size: 18px;
     line-height: 0.9em;
-    margin-top: 10px;
+    margin: 20px 0px;
     color: #000;
 }
 
-@media only screen and (max-width: 768px) {
+.copy {
+    width: 100%;
+    height: 40px;
+    background-color: var(--orange);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-weight: 500;
+    font-size: 16px;
+    cursor: pointer;
+}
 
-    /* For mobile phones: */
+@media only screen and (min-width: 768px) {
+
+    /* For Desktop: */
     .header {
-        padding: 20px 10px;
-    }
-
-    .hero {
-        padding: 20px 20px;
+        padding: 20px 50px;
     }
 
     .heroText {
-        width: 100%;
-        font-size: 50px;
-        line-height: 0.8em;
+        font-size: 70px;
     }
 
-    .styledText {
-        font-size: 50px;
-        line-height: 0.8em;
-    }
-
-    .demo {
-        padding: 20px;
-    }
-
-    .form {
-        width: 100%;
-    }
-
-    select {
-        width: 100%;
-    }
-
-    .button {
-        width: 100%;
-
-    }
-
-    .results {
-        width: 90%;
+    select,
+    .button,
+    .result-card {
+        width: 60%;
     }
 
     .result-card {
-        padding: 40px 20px;
-        text-align: center;
-        margin-bottom: 20px;
+        min-height: 250px;
+        justify-content: space-between;
+        padding: 30px 50px;
     }
 
-    .marquee {
-        font-size: 14px;
+    .result-card p {
+        font-size: 25px;
     }
 
 
