--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 }
 
 .hero {
-    padding: 50px 20px;
+    padding: 50px 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,15 +38,15 @@
 }
 
 .heroText {
-    width: 60%;
-    font-size: 50px;
+    width: 80%;
+    font-size: 40px;
     line-height: 1em;
     color: var(--orange);
 }
 
 .hero p {
     margin-top: 20px;
-    width: 60%;
+    width: 80%;
 }
 
 .demo {
@@ -134,12 +134,17 @@ select {
 
     .heroText {
         font-size: 70px;
+        width: 50%;
+    }
+
+    .hero p {
+        width: 50%;
     }
 
     select,
     .button,
     .result-card {
-        width: 60%;
+        width: 50%;
     }
 
     .result-card {
